syntax = "proto3";

package astria.protocol.transactions.v1alpha1;

import "astria/primitive/v1/types.proto";
import "astria_vendored/penumbra/core/component/ibc/v1/ibc.proto";
import "astria_vendored/tendermint/abci/types.proto";
import "google/protobuf/any.proto";

// `SignedTransaction` is a transaction that has
// been signed by the given public key.
// It wraps an `UnsignedTransaction` with a
// signature and public key.
message SignedTransaction {
  bytes signature = 1;
  bytes public_key = 2;
  google.protobuf.Any transaction = 3;
}

// `UnsignedTransaction` is a transaction that does
// not have an attached signature.
// Note: `value` must be set, it cannot be `None`.
message UnsignedTransaction {
  repeated Action actions = 1;
  TransactionParams params = 2;
}

// `TransactionParams` contains parameters that define the
// validity of the transaction.
message TransactionParams {
  uint32 nonce = 1;
  string chain_id = 2;
}

message Action {
  oneof value {
    // Core protocol actions are defined on 1-10
    TransferAction transfer_action = 1;
    SequenceAction sequence_action = 2;

    // Bridge actions are defined on 11-20
    InitBridgeAccountAction init_bridge_account_action = 11;
    BridgeLockAction bridge_lock_action = 12;
    BridgeUnlockAction bridge_unlock_action = 13;
    BridgeSudoChangeAction bridge_sudo_change_action = 14;

    // IBC user actions are defined on 21-30
    astria_vendored.penumbra.core.component.ibc.v1.IbcRelay ibc_action = 21;
    Ics20Withdrawal ics20_withdrawal = 22;

    // POA sudo actions are defined on 50-60
    SudoAddressChangeAction sudo_address_change_action = 50;
    astria_vendored.tendermint.abci.ValidatorUpdate validator_update_action = 51;
    IbcRelayerChangeAction ibc_relayer_change_action = 52;
    FeeAssetChangeAction fee_asset_change_action = 53;
    FeeChangeAction fee_change_action = 55;
  }
  reserved 3 to 10;
  reserved 15 to 20;
  reserved 23 to 30;
  reserved 56 to 60;

  // deprecated fields
  reserved 54; // deprecated "mint_action"
  reserved "mint_action";
}

// `TransferAction` represents a value transfer transaction.
//
// Note: all values must be set (ie. not `None`), otherwise it will
// be considered invalid by the sequencer.
message TransferAction {
  astria.primitive.v1.Address to = 1;
  astria.primitive.v1.Uint128 amount = 2;
  // the asset to be transferred
  string asset = 3;
  // the asset used to pay the transaction fee
  string fee_asset = 4;
}

// `SequenceAction` represents a transaction destined for another
// chain, ordered by the sequencer.
//
// It contains the rollup ID of the destination chain, and the
// opaque transaction data.
message SequenceAction {
  astria.primitive.v1.RollupId rollup_id = 1;
  bytes data = 2;
  // the asset used to pay the transaction fee
  string fee_asset = 3;
}

/// `SudoAddressChangeAction` represents a transaction that changes
/// the sudo address of the chain, which is the address authorized to
/// make validator update actions.
///
/// It contains the new sudo address.
message SudoAddressChangeAction {
  astria.primitive.v1.Address new_address = 1;
}

message Ics20Withdrawal {
  // first two fields are a transparent value consisting of an amount and a denom.
  astria.primitive.v1.Uint128 amount = 1;
  string denom = 2;
  // the address on the destination chain to send the transfer to.
  // this is not validated by Astria; it is up to the destination chain
  // to interpret it.
  string destination_chain_address = 3;
  // an Astria address to use to return funds from this withdrawal
  // in the case it fails.
  astria.primitive.v1.Address return_address = 4;
  // the height (on Astria) at which this transfer expires.
  IbcHeight timeout_height = 5;
  // the unix timestamp (in nanoseconds) at which this transfer expires.
  uint64 timeout_time = 6;
  // the source channel used for the withdrawal.
  string source_channel = 7;
  // the asset used to pay the transaction fee
  string fee_asset = 8;
  // a memo to include with the transfer
  string memo = 9;
  // the address of the bridge account to transfer from, if this is a withdrawal
  // from a bridge account and the sender of the tx is the bridge's withdrawer,
  // which differs from the bridge account's address.
  //
  // if unset, and the transaction sender is not a bridge account, the withdrawal
  // is treated as a user (non-bridge) withdrawal.
  //
  // if unset, and the transaction sender is a bridge account, the withdrawal is
  // treated as a bridge withdrawal (ie. the bridge account's withdrawer address is checked).
  astria.primitive.v1.Address bridge_address = 10;
}

message IbcHeight {
  uint64 revision_number = 1;
  uint64 revision_height = 2;
}

// `IbcRelayerChangeAction` represents a transaction that adds
// or removes an IBC relayer address.
// The bytes contained in each variant are the address to add or remove.
message IbcRelayerChangeAction {
  oneof value {
    astria.primitive.v1.Address addition = 1;
    astria.primitive.v1.Address removal = 2;
  }
}

// `FeeAssetChangeAction` represents a transaction that adds
// or removes an asset for fee payments.
message FeeAssetChangeAction {
  oneof value {
    string addition = 1;
    string removal = 2;
  }
}

// `InitBridgeAccountAction` represents a transaction that initializes
// a bridge account for the given rollup on the chain.
//
// The sender of the transaction is used as the owner of the bridge account
// and is the only actor authorized to transfer out of this account via
// a `TransferAction`.
message InitBridgeAccountAction {
  // the rollup ID to register with the bridge account (the tx sender)
  astria.primitive.v1.RollupId rollup_id = 1;
  // the asset ID accepted as an incoming transfer by the bridge account
  string asset = 2;
  // the asset used to pay the transaction fee
  string fee_asset = 3;
  // the address corresponding to the key which has sudo capabilities;
  // ie. can change the sudo and withdrawer addresses for this bridge account.
  // if this is empty, the sender of the transaction is used.
  astria.primitive.v1.Address sudo_address = 4;
  // the address corresponding to the key which can withdraw funds from this bridge account.
  // if this is empty, the sender of the transaction is used.
  astria.primitive.v1.Address withdrawer_address = 5;
}

// `BridgeLockAction` represents a transaction that transfers
// funds from a sequencer account to a bridge account.
//
// It's the same as a `TransferAction` but with the added
// `destination_chain_address` field.
message BridgeLockAction {
  // the address of the bridge account to transfer to
  astria.primitive.v1.Address to = 1;
  // the amount to transfer
  astria.primitive.v1.Uint128 amount = 2;
  // the asset to be transferred
  string asset = 3;
  // the asset used to pay the transaction fee
  string fee_asset = 4;
  // the address on the destination chain which
  // will receive the bridged funds
  string destination_chain_address = 5;
}

// `BridgeUnlockAction` represents a transaction that transfers
// funds from a bridge account to a sequencer account.
//
// It's the same as a `TransferAction` but without the `asset` field
// and with the `memo` field.
message BridgeUnlockAction {
  // the to withdraw funds to
  astria.primitive.v1.Address to = 1;
  // the amount to transfer
  astria.primitive.v1.Uint128 amount = 2;
  // the asset used to pay the transaction fee
  string fee_asset = 3;
  // The memo field can be used to provide unique identifying additional
  // information about the bridge unlock transaction.
  string memo = 4;
  // the address of the bridge account to transfer from
  astria.primitive.v1.Address bridge_address = 5;
  // The block number on the rollup that triggered the transaction underlying
  // this bridge unlock memo.
  uint64 rollup_block_number = 6;
  // An identifier of the original rollup event, such as a transaction hash which
  // triggered a bridge unlock and is underlying event that led to this bridge
  // unlock. This can be utilized for tracing from the bridge back to
  // distinct rollup events.
  //
  // This field is of type `string` so that it can be formatted in the preferred
  // format of the rollup when targeting plain text encoding.
  string rollup_withdrawal_event_id = 7;
}

message BridgeSudoChangeAction {
  // the address of the bridge account to change the sudo or withdrawer addresses for
  astria.primitive.v1.Address bridge_address = 1;
  // the new sudo address; unchanged if unset
  astria.primitive.v1.Address new_sudo_address = 2;
  // the new withdrawer address; unchanged if unset
  astria.primitive.v1.Address new_withdrawer_address = 3;
  // the asset used to pay the transaction fee
  string fee_asset = 4;
}

message FeeChangeAction {
  // note that the proto number ranges are doubled from that of `Action`.
  // this to accomodate both `base_fee` and `byte_cost_multiplier` for each action.
  oneof value {
    // core protocol fees are defined on 1-20
    astria.primitive.v1.Uint128 transfer_base_fee = 1;
    astria.primitive.v1.Uint128 sequence_base_fee = 2;
    astria.primitive.v1.Uint128 sequence_byte_cost_multiplier = 3;

    // bridge fees are defined on 20-39
    astria.primitive.v1.Uint128 init_bridge_account_base_fee = 20;
    astria.primitive.v1.Uint128 bridge_lock_byte_cost_multiplier = 21;
    astria.primitive.v1.Uint128 bridge_sudo_change_base_fee = 22;

    // ibc fees are defined on 40-59
    astria.primitive.v1.Uint128 ics20_withdrawal_base_fee = 40;
  }
}

// Response to a transaction fee ABCI query.
message TransactionFeeResponse {
  uint64 height = 2;
  repeated TransactionFee fees = 3;
}

message TransactionFee {
  string asset = 1;
  astria.primitive.v1.Uint128 fee = 2;
}
